stop line wrap and overflow on room cards

--- a/client/src/styles/_roomIndex.scss
+++ b/client/src/styles/_roomIndex.scss
@@ -3,3 +3,9 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.room-card .extra.content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
